--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
   margin-bottom: 20px;
   padding: 10px;
   font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0px 4px 6px #535252;
 }
 
 input {
@@ -34,6 +36,7 @@ button {
   border: 1px solid #585858;
   cursor: pointer;
   font-size: 18px;
+  font-weight: bold;
 }
 
 button:hover {
