--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,19 @@
 .App {
   text-align: center;
   max-width: 300px;
-  margin: 150px auto;
+  margin: 100px auto;
 }
 
 .card {
   max-width: 100%;
   height: 250px;
-  border: 2px solid black;
   border-radius: 5px;
   align-content: center;
   margin-bottom: 20px;
   padding: 10px;
   font-size: 20px;
   font-weight: bold;
-  box-shadow: 0px 4px 6px #535252;
+  box-shadow: 0px 2px 4px #535252;
 }
 
 input {
@@ -25,6 +24,7 @@ input {
   border-radius: 5px;
   outline: none;
   font-size: 18px;
+  font-weight: bold;
   box-sizing: border-box;
 }
 
